--- a/src/wzL/NJFrm.form
+++ b/src/wzL/NJFrm.form
@@ -3,7 +3,7 @@
 <Form version="1.7" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Warzone Online Launcher alpha 0.14a"/>
+    <Property name="title" type="java.lang.String" value="Warzone Online Launcher alpha 0.15"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
       <Color id="Default Cursor"/>
     </Property>
@@ -733,6 +733,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="DejaVu Sans Mono" size="12" style="0"/>
                     </Property>
+                    <Property name="selectionMode" type="int" value="0"/>
                     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                       <Color id="Default Cursor"/>
                     </Property>
@@ -746,8 +747,10 @@
             <Component class="javax.swing.JButton" name="jButton4">
               <Properties>
                 <Property name="text" type="java.lang.String" value="del"/>
-                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane5">
               <AuxValues>
@@ -854,7 +857,6 @@
             <Component class="javax.swing.JButton" name="jButton12">
               <Properties>
                 <Property name="text" type="java.lang.String" value="del"/>
-                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton12ActionPerformed"/>
@@ -946,7 +948,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Droid Sans" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt; This launcher made by Kaynix for warzone2100 players to make online play more comfortable.&lt;br&gt;  If you have any suggestions/improvments or found bug contact me kaynix29@gmail.com or at forum pm to &lt;b&gt;Terminator&lt;/b&gt;&lt;br&gt;  Warzone2100 Online version alpha 0.14a:&lt;br&gt;  - chat improvments&lt;br&gt; - add mods managment&lt;br&gt;  - add support for windows and linux OS (no MAC OS)&lt;br&gt;  - few bug fixes&lt;br&gt; - fixed --join 2 launches of warzone(for --host too)&lt;br&gt; - fixed web IRC users wasn&apos;t parsing in main chat&lt;br&gt;   &lt;br&gt; &lt;p&gt;run launcher in terminal to see logs.&lt;/p&gt;  &lt;/html&gt;" noResource="true"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt; This launcher made by Kaynix for warzone2100 players to make online play more comfortable.&lt;br&gt;&#xa;If you have any suggestions/improvments or found bug contact me kaynix29@gmail.com or at forum pm to &lt;b&gt;Terminator&lt;/b&gt;&#xa;&lt;br&gt;&#xa;Warzone2100 Online version alpha 0.15:&lt;br&gt;&#xa;- added profiles&lt;br&gt;&#xa;- preparing ladder background&lt;br&gt;&#xa;- improved mods managment&lt;br&gt;&#xa;- improved maps managment&lt;br&gt;&#xa;- bug fixes&lt;br&gt;&#xa;&lt;br&gt;&#xa;&lt;p&gt;run launcher in terminal to see logs.&lt;/p&gt;&#xa;&lt;br&gt;&#xa;&#xa;&lt;p&gt;For more info visit wz2100.net or warzone2100.org.ua &lt;/p&gt;&#xa;&lt;br&gt;&#xa;&lt;p&gt;source code: github.com/kaynix/wzL &lt;/p&gt;&#xa;&lt;/html&gt;" noResource="true"/>
                 <Property name="verticalAlignment" type="int" value="1"/>
               </Properties>
             </Component>
