--- a/src/wzL/NJFrm.form
+++ b/src/wzL/NJFrm.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.7" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Warzone Launcher alpha 0.15a"/>
+    <Property name="title" type="java.lang.String" value="Warzone Launcher alpha 0.15c"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
       <Color id="Default Cursor"/>
     </Property>
@@ -989,7 +989,7 @@
                           <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel12" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="159" max="32767" attributes="0"/>
+                      <EmptySpace pref="127" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1007,7 +1007,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Droid Sans" size="12" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt; This launcher made by Kaynix for warzone2100 players to make online play more comfortable.&lt;br&gt;&#xa;If you have any suggestions/improvments or found bug contact me kaynix29@gmail.com or at forum pm to &lt;b&gt;Terminator&lt;/b&gt;&#xa;&lt;br&gt;&#xa;Warzone2100 Launcher version alpha 0.15a*:&lt;br&gt;&#xa;- added profiles&lt;br&gt;&#xa;- added delete mod button&lt;br&gt;&#xa;- added delete map button&lt;br&gt;&#xa;- preparing ladder background&lt;br&gt;&#xa;- improved mods management&lt;br&gt;&#xa;- improved maps management&lt;br&gt;&#xa;- enabled launching game from campaign Alpha,Beta,Gamma&lt;br&gt;&#xa;- enabled fullscreen/resolution changer(direct writing to config file)&lt;br&gt;&#xa;- bug fixes&lt;br&gt;&#xa;*- add browse buttons for game exe and config folder&lt;br&gt;&#xa;*- fixed issue with game exe and config folder&lt;br&gt;&#xa;*- make use java preferences(location platform dependent)&lt;br&gt;&#xa;&lt;br&gt;&#xa;&lt;p&gt;run launcher in terminal to see logs.&lt;/p&gt;&#xa;&lt;br&gt;&#xa;&#xa;&lt;p&gt;For more info visit wz2100.net or warzone2100.org.ua &lt;/p&gt;&#xa;&lt;br&gt;&#xa;&lt;p&gt;source code: &lt;a href=&apos;github.com/kaynix/wzL&apos;&gt;github.com/kaynix/wzL&lt;/a&gt;&lt;/p&gt;&#xa;&lt;/html&gt;" noResource="true"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt; This launcher made by Kaynix for warzone2100 players to make online play more comfortable.&lt;br&gt; If you have any suggestions/improvments or found bug contact me kaynix29@gmail.com or at forum pm to &lt;b&gt;Terminator&lt;/b&gt; &lt;br&gt; Warzone2100 Launcher version alpha 0.15c**:&lt;br&gt; - added profiles&lt;br&gt; - added delete mod button&lt;br&gt; - added delete map button&lt;br&gt; - preparing ladder background&lt;br&gt; - improved mods management&lt;br&gt; - improved maps management&lt;br&gt; - enabled launching game from campaign Alpha,Beta,Gamma&lt;br&gt; - enabled fullscreen/resolution changer(direct writing to config file)&lt;br&gt; - bug fixes&lt;br&gt;*- add browse buttons for game exe and config folder&lt;br&gt; *- fixed issue with game exe and config folder&lt;br&gt;*- make use java preferences(location platform dependent)&lt;br&gt;**- fixed Java security issues&lt;br&gt;**- fixed folder relocation errors, so mods\u005cmaps should work again&lt;br&gt;&lt;br&gt;&lt;p&gt;run launcher in terminal to see logs.&lt;/p&gt; &lt;br&gt;  &lt;p&gt;For more info visit wz2100.net or warzone2100.org.ua &lt;/p&gt; &lt;br&gt; &lt;p&gt;source code: &lt;a href=&apos;github.com/kaynix/wzL&apos;&gt;github.com/kaynix/wzL&lt;/a&gt;&lt;/p&gt; &lt;/html&gt;" noResource="true" containsInvalidXMLChars="true"/>
                 <Property name="verticalAlignment" type="int" value="1"/>
               </Properties>
             </Component>
