--- a/src/wzL/NJFrm.form
+++ b/src/wzL/NJFrm.form
@@ -3,7 +3,7 @@
 <Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Warzone Launcher alpha 0.15c"/>
+    <Property name="title" type="java.lang.String" value="Warzone Launcher alpha 0.15e"/>
     <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
       <Color id="Default Cursor"/>
     </Property>
